# pixmux

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci_cd.yml
scripts/: visualize_html.html
src/: adjust_index.rs  app.rs  btree.rs  data_table.rs  image_layout.rs  image_lyt.rs  imagefile.rs  lib.rs  main.rs  panes.rs  panes_old.rs  parse_csv.rs  tab.rs  utils.rs
src/app/: events.rs  imgpane.rs  keymaps.rs  mod.rs
src/btree/: tests.rs
src/ui/: data_table.rs  image_layout.rs  image_tab.rs  mod.rs  tab.rs  tab_ui.rs  table_tab.rs  table_ui.rs
src/utils/: collect_imgfile_basenames.rs  cycle_index.rs  parse_csv.rs  step_index.rs
tests/: adjust_index.rs  btree.rs  imagefile.rs  panes.rs  panes_old.rs  parse_csv.rs
