[package]
name = "pixmux"
version = "0.1.0"
description = "An interactive TUI for exploring CSV-backed image datasets."
authors = ["Akshay Kumar <132216831+bmblb3@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
csv = "1.3"
