[package]
name = "pixmux"
version = "0.1.0"
description = "An interactive TUI for exploring CSV-backed image datasets."
authors = ["Akshay Kumar <132216831+bmblb3@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
csv = "1.3"
ratatui-image = "8.0.1"
image = "0.25.6"
clap = { version = "4.5.47", features = ["derive"] }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.21.0"
